--- a/package.json
+++ b/package.json
@@ -20,14 +20,9 @@
   },
   "homepage": "https://github.com/rapid7/warden#readme",
   "dependencies": {
-    "aws-sdk": "^2.2.47",
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "lodash": "^4.6.1",
-    "morgan": "^1.7.0",
-    "nconf": "^0.8.4",
-    "vaulted": "^3.0.0",
-    "winston": "^2.2.0",
-    "yargs": "^4.3.2"
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "body-parser": "^1.15.0",
