--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "mocha",
-    "lint": "eslint bin/** lib/** test/**"
+    "lint": "eslint bin/** lib/** test/**",
+    "install": "cd pkcs7 && bundle install"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,6 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
-    "body-parser": "^1.15.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "coveralls": "^2.11.9",
