--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-sdk": "^2.3.19",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "nock": "^8.0.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
