--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
-  "plugins": [
-    "rapid7"
-  ],
-  "extends": "rapid7/base"
+  "extends": "rapid7/base",
+   "globals": {
+    "Config": true,
+    "Log": true
+  },
+  "env": {
+    "node": true
+  }
 }
