--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
-node_js:
-  - node
 sudo: false
+script:
+  - npm test
+  - npm run lint
+  - npm run cover
+after_success:
+  npm run report
