PD-6747 added forgotten dec dependency

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-config-rapid7": "1.1.1",
+    "istanbul": "^0.4.3",
     "eslint-plugin-rapid7": "^5.0.1",
     "eslint-plugin-react": "^6.0.0",
     "mocha": "^3.0.2",
