--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "start": "node ./bin/server.js",
     "test": "mocha",
     "cover": "rm -Rf coverage/* && istanbul cover _mocha -- -R spec",
-    "lint": "eslint bin/* lib/*.js lib/**/*.js test/*.js test/**/*.js",
+    "lint": "eslint bin/* lib/*.js lib/**/*.js test/*.js",
     "report": "coveralls < ./coverage/lcov.info",
-    "warden-mock": "node ./test/bin/warden.js"
   },
   "repository": {
     "type": "git",
