--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "mocha",
     "cover": "rm -Rf coverage/* && istanbul cover _mocha -- -R spec",
     "lint": "eslint bin/* lib/*.js lib/**/*.js test/*.js",
-    "report": "coveralls < ./coverage/lcov.info",
+    "report": "coveralls < ./coverage/lcov.info"
   },
   "repository": {
     "type": "git",
