--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "warden",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A gatekeeper for vault that verifies a server should have a vault token",
   "directories": {
     "doc": "docs",
@@ -26,8 +26,12 @@
     "aws-sdk": "^2.3.19",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "express-winston": "^2.0.0",
+    "nconf": "^0.8.4",
     "nock": "^8.0.0",
-    "winston": "^2.2.0"
+    "path": "^0.12.7",
+    "winston": "^2.2.0",
+    "yargs": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
