--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ node_modules
 # Optional npm cache directory
 .npm
 
+# vender directory
+vendor/
+
 # Optional REPL history
 .node_repl_history
 .bundle/
