--- a/package.json
+++ b/package.json
@@ -24,34 +24,34 @@
   },
   "homepage": "https://github.com/rapid7/warden#readme",
   "dependencies": {
-    "aws-sdk": "^2.3.19",
-    "body-parser": "^1.15.0",
-    "bundled-gem-spawn": "^1.0.1",
-    "express": "^4.13.4",
-    "express-winston": "^2.0.0",
-    "nconf": "^0.8.4",
-    "nock": "^8.0.0",
-    "path": "^0.12.7",
-    "winston": "^2.2.0",
-    "yargs": "^5.0.0"
+    "aws-sdk": "~2.3.19",
+    "body-parser": "~1.15.0",
+    "bundled-gem-spawn": "~1.0.1",
+    "express": "~4.13.4",
+    "express-winston": "~2.0.0",
+    "nconf": "~0.8.4",
+    "nock": "~8.0.0",
+    "path": "~0.12.7",
+    "winston": "~2.2.0",
+    "yargs": "~5.0.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
-    "coveralls": "^2.11.9",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
+    "chai": "~3.5.0",
+    "chai-as-promised": "~5.3.0",
+    "coveralls": "~2.11.9",
+    "eslint": "~3.2.2",
+    "eslint-config-airbnb": "~10.0.0",
     "eslint-config-rapid7": "1.1.1",
-    "istanbul": "^0.4.3",
-    "eslint-plugin-rapid7": "^5.0.1",
-    "eslint-plugin-react": "^6.0.0",
-    "expect": "^1.20.2",
-    "mocha": "^3.0.2",
-    "mocha-lcov-reporter": "^1.2.0",
-    "proxyquire": "^1.7.4",
-    "should": "^10.0.0",
+    "istanbul": "~0.4.3",
+    "eslint-plugin-rapid7": "~5.0.1",
+    "eslint-plugin-react": "~6.0.0",
+    "expect": "~1.20.2",
+    "mocha": "~3.0.2",
+    "mocha-lcov-reporter": "~1.2.0",
+    "proxyquire": "~1.7.4",
+    "should": "~10.0.0",
     "should-sinon": "0.0.5",
-    "sinon": "^1.17.3",
-    "supertest": "^2.0.0"
+    "sinon": "~1.17.3",
+    "supertest": "~2.0.0"
   }
 }
