--- a/package.json
+++ b/package.json
@@ -38,13 +38,12 @@
     "chai": "~3.5.0",
     "chai-as-promised": "~5.3.0",
     "coveralls": "~2.11.9",
-    "eslint": "~3.3.0",
-    "eslint-config-airbnb": "~10.0.0",
-    "eslint-config-rapid7": "1.1.1",
-    "istanbul": "~0.4.3",
-    "eslint-plugin-rapid7": "~5.0.1",
-    "eslint-plugin-react": "~6.0.0",
+    "eslint": "^3.12.2",
+    "eslint-config-rapid7": "^2.6.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.8.0",
     "expect": "~1.20.2",
+    "istanbul": "~0.4.3",
     "mocha": "~3.0.2",
     "mocha-lcov-reporter": "~1.2.0",
     "proxyquire": "~1.7.4",
