Add init file for tests with common config and logging code.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node ./bin/server.js",
-    "test": "mocha",
+    "test": "mocha --require ./test/init",
     "cover": "rm -Rf coverage/* && istanbul cover _mocha -- -R spec",
     "lint": "eslint bin/* lib/*.js lib/**/*.js test/*.js",
     "report": "coveralls < ./coverage/lcov.info"
